# AA

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README  TODO  const.cmake  const.cmake.example  iterator_helpers.hpp  knapsack_definition.dox  local_search.hpp  main.cpp  trivial_neighbour.hpp
docs/: 2_opt.dox  (+46 more)
examples/: 2_local_search_example.cpp  CMakeLists.txt  capacitated_facility_location_example.cpp  facility_location.cpp  facility_location_example.cpp  generalised_assignment_example.cpp  k_median_example.cpp  local_search_example.cpp  local_search_multi_solution_example.cpp  steiner_network_example.cpp  steiner_tree_example.cpp  tree_aug_example.cpp  tree_aug_example.cpp~  tree_aug_example_input.lgfmod
examples/auctions/: demand_query_example.cpp  gamma_oracle_example.cpp  single_minded_example.cpp  value_query_example.cpp  xor_bids_example.cpp
examples/data_structures/: components_example.cpp
examples/distance_oracle/: distance_oracle_example.cpp
examples/dynamic/: knapsack_0_1_example.cpp  knapsack_0_1_fptas_example.cpp  knapsack_0_1_no_output_example.cpp  knapsack_0_1_on_size_fptas_example.cpp  knapsack_0_1_on_size_fptas_no_output_example.cpp  knapsack_0_1_on_value_fptas_example.cpp  knapsack_0_1_on_value_fptas_no_output_example.cpp  knapsack_example.cpp  knapsack_fptas_example.cpp  knapsack_on_size_fptas_example.cpp  knapsack_on_value_fptas_example.cpp  knapsack_unbounded_example.cpp  knapsack_unbounded_on_size_fptas_example.cpp  knapsack_unbounded_on_value_fptas_example.cpp
examples/greedy/: k_center_example.cpp  k_cut_example.cpp  knapsack_0_1_two_app_example.cpp  knapsack_two_app_example.cpp  knapsack_unbounded_two_app_example.cpp  scheduling_jobs_example.cpp  scheduling_jobs_on_identical_parallel_machines_example.cpp  scheduling_jobs_with_deadlines_on_a_single_machine_example.cpp  shortest_superstring_example.cpp  steiner_tree_greedy_example.cpp
examples/iterative_rounding/: bounded_degree_mst_example.cpp  capacitated_facility_location_example.cpp  generalised_assignment_example.cpp  iterative_rounding_example.cpp  lp.cpp  steiner_network_example.cpp  steiner_tree_ir_example.cpp  tree_aug_example.cpp  tree_aug_example_input.lgfmod  tree_augmentation_example.cpp
examples/linear_programming/: glp_example.cpp  lp_example.cpp
examples/local_search/: 2_local_search_example.cpp  capacitated_facility_location_example.cpp  facility_location_example.cpp  k_median_example.cpp  local_search_example.cpp  local_search_lambda_example.cpp  local_search_lambda_sa_tabu_example.cpp  local_search_multi_solution_example.cpp  n_queens_example.cpp
examples/miscellaneous/: dreyfus_wagner_example.cpp  steiner_tree_example.cpp  zelikovsky_11_per_6_example.cpp
examples/regression/: lsh_nearest_neighbors_regression_efficient_example.cpp  lsh_nearest_neighbors_regression_example.cpp
examples/sketch/: frequent_directions_example.cpp
examples/utility/: functors_example.cpp  fusion_algorithms_example.cpp
test/: CMakeLists.txt  all_long_tests.cpp  all_small_tests.cpp  assign_updates_test.cpp  cycle_manager_test.cpp  facility_location_local_search_test.cpp  facility_location_solution_test.cpp  fast_exp_test.cpp  generalised_assignment.cpp  inifity_test.cpp  iterative_rounding_test.cpp  iterator_with_stop_condition_test.cpp  local_search_multi_solution_lambdas_test.cpp  local_search_multi_solution_test.cpp  local_search_obj_fun_test.cpp  local_search_test.cpp  min_cost_max_flow_test.cpp  run_compilation_error_tests.sh  run_tests.sh  run_tests_long.sh  steiner_tree_test.cpp  subset_iterator_test.cpp  vertex_to_edge_iterator_test.cpp
test/2_local_search/: 2_local_search_from_stdin.cpp  2_local_search_long_test.cpp  2_local_search_long_tests.cpp  2_local_search_test.cpp
test/FL_ORLIB/: uncapopt.txt
test/TSPLIB/: TSPLIB.h
test/auctions/: fractional_winner_determination_in_MUCA_long_test.cpp  fractional_winner_determination_in_MUCA_test.cpp  single_minded_auctions_test.cpp  winner_determination_in_MUCA_long_test.cpp  winner_determination_in_MUCA_test.cpp  winner_determination_in_multi_unit_CAs_long_test.cpp  winner_determination_in_multi_unit_CAs_test.cpp  xor_bids_test.cpp
test/bounded_degree_min_spanning_tree/: bounded_degree_mst.cpp  bounded_degree_mst_long_test.cpp  bounded_degree_mst_test.cpp
test/clustering/: k_means_clustering_long_test.cpp
test/data_structures/: bimap_perf_long_test.cpp  bimap_perf_test.cpp  capacitated_voronoi_test.cpp  combine_iterator_test.cpp  components_test.cpp  cycle.hpp  cycle_manager_test.cpp  cycle_test.cpp  facility_location_solution_test.cpp  mapped_file_test.cpp  metric_test.cpp  simple_cycle_test.cpp  splay_cycle_test.cpp  splay_tree_test.cpp  static_lazy_join_test.cpp  subset_iterator_test.cpp  ublas_traits_test.cpp  vertex_to_edge_iterator_test.cpp  voronoi_test.cpp
test/distance_oracle/: vertex_vertex_thorup2kminus1_long_test.cpp  vertex_vertex_thorup2kminus1_test.cpp
test/facility_location/: capacitated_facility_location_long_test.cpp  facility_location_local_search_test.cpp  facility_location_long_test.cpp  facility_location_neghborhood_getter_test.cpp  facility_location_solution_adapter_test.cpp  facility_location_solution_test.cpp
test/generalised_assignment/: generalised_assignment.cpp  generalised_assignment_long_test.cpp  generalised_assignment_test.cpp
test/greedy/: budgeted_maximum_coverage_long_test.cpp  budgeted_maximum_coverage_test.cpp  knapsack_two_app_long_test.cpp  max_coverage_test.cpp  scheduling_jobs_long_test.cpp  scheduling_jobs_on_identical_parallel_machines_long_test.cpp  scheduling_jobs_on_identical_parallel_machines_test.cpp  scheduling_jobs_test.cpp  scheduling_jobs_with_deadlines_on_a_single_machine_test.cpp  set_cover_long_test.cpp  set_cover_test.cpp  steiner_tree_greedy_long_test.cpp  steiner_tree_greedy_test.cpp
test/iterative_rounding/: log_visitor.hpp
test/k_median/: k_median_solution_adapter_test.cpp  k_median_test.cpp
test/local_search/: local_search_custom_components_test.cpp  local_search_lambdas_langrange_relax_test.cpp  local_search_multi_solution_lambdas_test.cpp  (+5 more)
(+1189 files in other folders)
